--- a/trunk/.config
+++ b/trunk/.config
@@ -3,7 +3,7 @@ CONFIG_VENDOR=Ralink
 CONFIG_PRODUCT=RT3883
 #CONFIG_PRODUCT=MT7620
 
-### Target ProductID (board select, fixed 7 symbols)
+### Target ProductID (board select, max 12 symbols)
 #CONFIG_FIRMWARE_PRODUCT_ID="RT-N14U"
 CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
 #CONFIG_FIRMWARE_PRODUCT_ID="RT-N65U"
