--- a/trunk/configs/IPv6/RT-N56U/kernel-3.0.x.ram.config
+++ b/trunk/configs/IPv6/RT-N56U/kernel-3.0.x.ram.config
@@ -1985,6 +1985,11 @@ CONFIG_RT3090_AP_DBG=y
 # CONFIG_RT3593_AP is not set
 
 #
+# AP MODE Ralink PCIe MT7610E wireless driver
+#
+# CONFIG_MT7610_AP is not set
+
+#
 # AP MODE Ralink iNIC MII RT3352 wireless driver
 #
 # CONFIG_RT3352_INIC_MII is not set
