--- a/trunk/configs/IPv6/RT-N65U/kernel-3.0.x.ram.config
+++ b/trunk/configs/IPv6/RT-N65U/kernel-3.0.x.ram.config
@@ -1934,6 +1934,11 @@ CONFIG_RT2860V2_AP_DBG=y
 # CONFIG_RT3593_AP is not set
 
 #
+# AP MODE Ralink PCIe MT7610E wireless driver
+#
+# CONFIG_MT7610_AP is not set
+
+#
 # AP MODE Ralink iNIC MII RT3352 wireless driver
 #
 CONFIG_RT3352_INIC_MII=m
